assets/stylesheets/_base.scss
// Bootstrap Overrides
.container-fluid {
  padding: 0;
}

body {
  background-color: $theme-white;
}

#disqus_thread .publisher-anchor-color {
  color: black !important;
}

disqus-link {
  color: $theme-gray;
}

img {
  margin: 0 auto;
  border: 2px solid $theme-gray;
  border-radius: 2px;
  box-shadow: 2px 2px 5px #020202;
}

.no-gutter > [class*='col-'] {
    padding-right:0;
    padding-left:0;
}

.temp-pag {
	text-align: center;
}

